<resources>
    <string name="app_name">Movie App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="discover">Discover</string>
    <string name="stream_everywhere">Stream Everywhere</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="ready_player_one">Ready Player One</string>
    <string name="trending">Trending</string>
    <string name="star_wars_the_last_jedi">Star Wars: The Last Jedi</string>
    <string name="find_movies_tv_series_nand_more">Find Movies, Tv Series, \nand more</string>
    <string name="sherlock_holmes">Sherlock Holmes</string>
    <string name="mulan">Mulan</string>
    <string name="_7_0">7.0</string>
    <string name="imdb">IMDb</string>
    <string name="_2020">2020</string>
</resources>