<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_bg"
    tools:context=".presentation.ui.home.HomeFragment">

    <TextView
        android:id="@+id/stream_everyWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_44dp"
        android:fontFamily="@font/lato"
        android:letterSpacing="0.02"
        android:text="@string/stream_everywhere"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/streaming_cv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_191dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_28dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stream_everyWhere">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/streaming_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/stream_pic"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/stream_info_cv"
                android:layout_width="wrap_content"
                android:background="#4DDADADA"
                app:cardCornerRadius="10dp"
                android:alpha="0.7"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/play_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/black"
                        android:layout_marginStart="@dimen/margin_12dp"
                        android:layout_marginVertical="@dimen/margin_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/ic_play"/>

                    <TextView
                        android:id="@+id/continue_watching_tv"
                        android:layout_width="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/play_btn"
                        android:textSize="@dimen/text_size_12sp"
                        android:letterSpacing="0.02"
                        android:layout_marginStart="@dimen/margin_12dp"
                        android:textColor="@color/ash"
                        android:fontFamily="@font/lato"
                        android:layout_marginTop="@dimen/margin_11dp"
                        app:layout_constraintStart_toEndOf="@id/play_btn"
                        android:text="@string/continue_watching"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/streaming_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/ready_player_one"
                        android:fontFamily="@font/lato"
                        android:layout_marginTop="@dimen/margin_4dp"
                        android:layout_marginEnd="@dimen/margin_16dp"
                        android:layout_marginStart="@dimen/margin_12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="@dimen/margin_14dp"
                        app:layout_constraintBottom_toBottomOf="@id/play_btn"
                        app:layout_constraintStart_toEndOf="@id/play_btn"
                        app:layout_constraintTop_toBottomOf="@id/continue_watching_tv"
                        android:textSize="@dimen/text_size_16sp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/trending_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending"
        android:fontFamily="@font/lato"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_36dp"
        android:textSize="@dimen/text_size_24sp"
        android:letterSpacing="0.02"
        app:layout_constraintTop_toBottomOf="@id/streaming_cv"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trending_tv"
        tools:itemCount="5"
        tools:listitem="@layout/trending_vp_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>