<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trending_root_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    android:layout_marginBottom="@dimen/margin_11dp"
    android:layout_marginEnd="@dimen/margin_24dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_bg">

        <ImageView
            android:id="@+id/poster_iv"
            android:layout_width="258dp"
            android:layout_height="336dp"
            android:scaleType="centerCrop"
            android:src="@drawable/trending_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="#4DDADADA"
            android:alpha="0.7"
            app:cardCornerRadius="@dimen/radius_15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/imbd_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/lato"
                    android:letterSpacing="0.02"
                    android:text="@string/imdb"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_8sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/rating_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_1dp"
                    android:layout_marginBottom="@dimen/margin_6dp"
                    android:src="@drawable/ic_yellow_star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imbd_tv" />

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/_7_0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintBottom_toBottomOf="@id/rating_iv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/rating_iv"
                    app:layout_constraintTop_toTopOf="@id/rating_iv" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/trending_info_cv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:alpha="0.7"
            android:background="#4DDADADA"
            app:cardCornerRadius="@dimen/radius_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/trending_movie_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:layout_marginVertical="@dimen/margin_28dp"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:letterSpacing="0.02"
                    android:text="@string/star_wars_the_last_jedi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>